<resources>
    <string name="app_name">Smart Agro</string>
    <string name="dashboard">Dashboard</string>
    <string name="disease_detection">Disease Detection</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_status">Connection Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="image_description">Main image display</string>
    <string name="image_name_placeholder">Image Name</string>
    <string name="description_label">Description</string>
    <string name="description_placeholder">Add your image description here...</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="here_s_what_s_happening_today">Here\'s what\'s happening today</string>
    <string name="this_time">This Time</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="item_scanned_successfully">Item scanned successfully</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="scan">Scan</string>

</resources>